@@ -111,3 +111,15 @@ int get_hostaddr_hostent(int *local_errno, char *hostname, char **host_addr, int
   fprintf(stderr, "The call to get_hostaddr_hostent needs to be mocked!!\n");
   exit(1);
   }
+
+int get_hostaddr_hostent_af(int *local_errno, char *hostname, unsigned int *, char **host_addr, int *host_addr_len)
+  {
+  fprintf(stderr, "The call to get_hostaddr_hostent needs to be mocked!!\n");
+  exit(1);
+  }
+
+int get_hostaddr_hostent_af(int *local_errno, char *hostname, unsigned short *af_family, char **host_addr, int *host_addr_len)
+  {
+  fprintf(stderr, "The call to get_hostaddr_hostent needs to be mocked!!\n");
+  exit(1);
+  }
