@@ -81,4 +81,10 @@ char *pbse_to_txt(int err)
   exit(1);
   }
 
+ int get_hostaddr_hostent_af(int *local_errno, char *hostname, unsigned short *af_family, char **host_addr, int *host_addr_len)
+  {
+  fprintf(stderr, "The call to get_hostaddr_hostent needs to be mocked!!\n");
+  exit(1);
+  }
+
 
